<resources>
    <string name="app_name">Leave Manager</string>
    <string name="sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="leave_icon_content_description">Icon to indicate leave status</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_registered_email">Enter registered Email</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="invalid_email_id">Invalid Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="password_error">Passwords do not match</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="leave_reason">Leave Reason</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="auth_failed">Authorization Failed!</string>
    <string name="logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="leave_type">LEAVE TYPE</string>
    <string name="date_of_application">DATE OF APPLICATION</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="reason">REASON</string>
    <string name="editProfile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="status">STATUS</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hr">HR</string>
</resources>
