<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neeraj8le.leavemanager.activity.SignUpActivity">
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTextInputLayout"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:id="@+id/id"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextInputLayout"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:id="@+id/name"
                android:backgroundTint="@color/white"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deptTextInputLayout"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:id="@+id/dept"
                android:layout_alignParentStart="true"
                android:layout_marginTop="6dp"
                android:hint="@string/department"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/designationTextInputLayout"
            android:layout_marginTop="6dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="6dp"
                android:id="@+id/desig"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/designation"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTextInputLayout"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:id="@+id/phone"
                android:backgroundTint="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginTop="6dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner1"
            android:spinnerMode="dialog"

            android:popupBackground="@color/colorBackground"/>
        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/update" />
    </LinearLayout>
</ScrollView>

